syntax = "proto3";
package playcase;

option go_package = "./grpcService";

service MusicPlaylist {
  rpc AddSong(AddSongRequest) returns (AddSongResponse) {}
  rpc GetSongs(GetSongsRequest) returns (GetSongsResponse) {}
  rpc UpdateSong(UpdateSongRequest) returns (UpdateSongResponse) {}
  rpc DeleteSong(DeleteSongRequest) returns (DeleteSongResponse) {}
  rpc Play(PlayRequest) returns (PlayResponse) {}
  rpc Pause(PauseRequest) returns (PauseResponse) {}
  rpc Next(NextRequest) returns (NextResponse) {}
  rpc Previous(PreviousRequest) returns (PreviousResponse) {}
}

message Song {
  int64 id = 1;
  string title = 2;
  int64 duration = 3;
  repeated string tags = 4;
}

message AddSongRequest {
  Song song = 1;
}

message AddSongResponse {
  bool success = 1;
}

message GetSongsRequest {}

message GetSongsResponse {
 repeated Song song = 1;
}

message UpdateSongRequest {
  int64 id = 1;
  Song song = 2;
}

message UpdateSongResponse {
  bool success = 1;
  int64 id = 2;
}

message DeleteSongRequest {
  int64 id = 1;
}

message DeleteSongResponse {
  bool success = 1;
}

message PlayRequest {}

message PlayResponse {
  bool success = 1;
  string name = 2;
}

message PauseRequest {}

message PauseResponse {
  bool success = 1;
}

message NextRequest {}

message NextResponse {
  bool success = 1;
  string name = 2;
}

message PreviousRequest {}

message PreviousResponse {
  bool success = 1;
  string name = 2;
}